@@ -35,6 +35,8 @@ PHP                                                                        NEWS
   parameters). (Jani)
 - Fixed bug #28930 (PHP sources pick wrong header files generated by bison).
   (eggert at gnu dot org, Jani)
+- Fixed bug #28444 (Cannot access undefined property for object with overloaded
+  property access). (Dmitry)
 - Fixed bug #28074 (FastCGI: stderr should be written in a FCGI stderr stream).
   (chris at ex-parrot dot com)
   
